--- a/.github/workflows/bearer.yml
+++ b/.github/workflows/bearer.yml
@@ -16,7 +16,7 @@ jobs:
       - uses: actions/checkout@v3
       - name: Run Report
         id: report
-        uses: bearer/bearer-action@main
+        uses: bearer/bearer-action@fix/bash-syntax
       - id: summary
         name: Display Summary
         uses: actions/github-script@v6
